--- a/content/images/cssgrid_files/grid.css
+++ b/content/images/cssgrid_files/grid.css
@@ -34,15 +34,18 @@
 
     section {
       background-color: white;
-
-      background-image: linear-gradient(transparent 50%, rgba(255,255,255,.5) 50%);
-      background-size: 40px 40px;
-
-
       padding: 3px;
-      line-height: 40px;
+      font-size: 18px;
+      line-height: 20px;
       vertical-align: bottom;
     }
+
+/*
+    .description, .facts {
+      background-image: linear-gradient(transparent 50%, rgba(255,255,255,.5) 50%);
+      background-size: 40px 40px;
+    }
+*/    
 
     .headline { 
       background-color: #EBBB5B; 
@@ -58,24 +61,25 @@
 
     .description { 
       background-color: #DD4232; 
-      font-size: 40px;   
+      font-size: 40px;  
+      line-height: 40px; 
       padding-top: 7px;
     }    
 
     .facts { 
       background-color: #EBBB5B; 
-      font-size: 18px;
-      padding-top: 14px;
-      line-height:;
+      line-height: 40px; 
+      padding-top: 14px;      
     } 
 
     ul {
       list-style-type: square;
-      padding-left: 30px;
+      padding-left: 30px;     
     }
 
     .stylename { 
       font-size: 40px;   
+      line-height: 40px;       
       color: white;
       background-color: #191910; 
     }    
@@ -97,11 +101,17 @@
     }
 
     .navigation { 
-      padding-top: 15px;
-
       background-color: #191910; 
       color: white;
+      line-height: 40px; 
+      padding-top: 14px;        
     }
+    .navigation h2 {
+      font-size: 18px;
+      line-height: 40px;   
+      margin-left: 10px;    
+    }
+
 
 
 
