--- a/content/images/cssgrid_files/grid.css
+++ b/content/images/cssgrid_files/grid.css
@@ -1,126 +1,98 @@
 /* Desktop */
-@media screen and (min-width: 1200px)  {
 
-
-}
-
-/* mondriaan !!!! */
-
-@media screen and (min-width: 1100px) and (max-width: 1200px) {
 
     .page_container {
-      background-color: black;
-      /*
-      background-image:  url(mondriaan.jpg);
-      background-size: cover;
-      */
-      height:1200px;
-      width:1200px;
-
       display: grid;
 
-      grid-template-columns: 140fr 131fr 152fr 283fr 190fr 166fr 30fr;
-      grid-template-rows: 114fr 306fr 305fr 131fr 129fr 70fr 46fr;
-      grid-gap: 25px 25px;  
+      grid-template-columns: 270px 5fr 3fr;
+      grid-template-rows: 60px 2fr 210px;
 
-      grid-template-areas:  "w1    w1           w2           w2           headline  headline  w3"
-                            "w4    description  description  description  facts     facts     w3"
-                            "w5    description  description  description  portrait  w11       w3"
-                            "w5    navigation   navigation   w6           w7        w7        w3"
-                            "gelb  navigation   navigation   w8           css       css       rot"
-                            "gelb  w9           w9           stylename    css       css       rot"
-                            "gelb  w9           w9           w10          w10       w10       rot";
+      grid-template-areas:  "w1        headline     stylename"
+                            "portrait  description  css"
+                            "w2        facts        navigation";
     }
 
     section {
       background-color: white;
-      padding: 3px;
-      font-size: 18px;
+      padding: 10px;
+      font-size: 22px;
       line-height: 20px;
-      vertical-align: bottom;
     }
 
-/*
-    .description, .facts {
-      background-image: linear-gradient(transparent 50%, rgba(255,255,255,.5) 50%);
-      background-size: 40px 40px;
+    .page_container h1 { margin:0; padding:0; }
+
+    .headline {
+      background-color: #EBBB5B;
+      padding-top: 19px;
     }
-*/    
 
-    .headline { 
-      background-color: #EBBB5B; 
-    }    
-
-    .headline h1 {
-      font-size: 40px;   
+    .description {
+      padding-top: 12px;
       line-height: 40px;
-      padding-top: 43px;
-      margin: 0;
-      padding-left: 28px;
     }
 
-    .description { 
-      background-color: #DD4232; 
-      font-size: 40px;  
-      line-height: 40px; 
-      padding-top: 7px;
-    }    
-
-    .facts { 
-      background-color: #EBBB5B; 
-      line-height: 40px; 
-      padding-top: 14px;      
-    } 
+    .facts {
+      padding-top: 61px;
+    }
 
     ul {
       list-style-type: square;
-      padding-left: 30px;     
+      padding-left: 30px;
+      padding-top: 12px;
+      line-height: 40px;
     }
 
-    .stylename { 
-      font-size: 40px;   
-      line-height: 40px;       
-      color: white;
-      background-color: #191910; 
-    }    
+    .stylename {
+      background-color: #EBBB5B;
+      padding-top: 23px;
+    }
 
-    .css { 
-      background-color: #024276; 
-      color: white;
-      font-size: 12px;
-      line-height: 20px;
-      padding-top: 6px;
-      overflow: auto;
-    }    
+    .css {
+      font-size: 18px;
+      line-height: 40px;
+      padding-top: 13px;
+    }
+    .css b { display: block;}
 
-    .portrait { 
+    .portrait {
       width: auto;
       height: auto;
-      background-color: #EBBB5B; 
+      background-color: #EBBB5B;
       background-size: cover;
     }
 
-    .navigation { 
-      background-color: #191910; 
-      color: white;
-      line-height: 40px; 
-      padding-top: 14px;        
+    .navigation {
+      line-height: 40px;
+      padding-top: 17px;
     }
     .navigation h2 {
       font-size: 18px;
-      line-height: 40px;   
-      margin-left: 10px;    
+      line-height: 40px;
+      margin-left: 10px;
+      margin-bottom: 0;
+    }
+    .navigation ul {
+      padding-top: 0px;
     }
 
 
 
 
-    .gelb { 
-      background-color: #EBBB5B; 
-    }
-    .rot { 
-      background-color: #DD4232; 
-    }    
+    .gelb { display: none; }
+    .rot { display: none; }
+    .w1 {display: none; }
+    .w2 {display: none; }
+
+    .w3 {display: none; }
+    .w4 {display: none; }
+    .w5 {display: none; }
+    .w6 {display: none; }
+    .w7 {display: none; }
+    .w8 {display: none; }
+    .w9 {display: none; }
+    .w10 {display: none; }
+    .w11{display: none; }
+
 
 
 
