--- a/content/images/flexbox/flex0.css
+++ b/content/images/flexbox/flex0.css
@@ -1,14 +1,13 @@
-/*  1 = basic flexbox, boxes shrink */
+/*  0 = no flexbox */
 
 .projects {
 
-  display: flex;
-  justify-content: space-between;
 }
 
 .project_partial {
   width: 160px;
   height: 275px;
+  background-color: #292927;
   overflow: hidden;
   color: white;
   position: relative;
