--- a/content/images/flexbox/flex1.css
+++ b/content/images/flexbox/flex1.css
@@ -1,15 +1,11 @@
-/*  3 = fixed width elements, wrap */
-
+/*  1 = basic flexbox, boxes shrink */
 
 .projects {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
-  
 }
 
 .project_partial {
-  flex-shrink: 0;
   width: 160px;
   height: 275px;
   overflow: hidden;
