--- a/content/images/flexbox/flex2.css
+++ b/content/images/flexbox/flex2.css
@@ -1,13 +1,15 @@
-/*  0 = no flexbox */
+/*  2 = fixed width elements */
 
 .projects {
-  
+  display: flex;
+  justify-content: space-between;
 }
 
 .project_partial {
+  flex-shrink: 0;
+
   width: 160px;
   height: 275px;
-  background-color: #292927;
   overflow: hidden;
   color: white;
   position: relative;
