new in css layout

--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -1,3 +1,35 @@
+.resizable {
+  resize: horizontal; 
+  overflow: scroll; 
+  border: 2px #ddd solid; 
+  padding: 10px; 
+  font-size: 10px;
+  position: relative;
+}
+
+.hyphenate {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
+.resizable *, .resizable * * {
+  font-size: 12px !important;
+}
+
+.resizable::after {
+  content: "resize";
+  background-color: #EA7600;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  left: 0;
+  font-family: sans-serif;
+  font-variant: small-caps;
+}
+
 li.separator{
   margin-bottom: 24px;
 }
