css layout überarbeitet, lang eingestellt, nicht-utf-8 chars entfernt

--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -1,8 +1,8 @@
 .resizable {
-  resize: horizontal; 
-  overflow: scroll; 
-  border: 2px #ddd solid; 
-  padding: 10px; 
+  resize: both;
+  overflow: scroll;
+  border: 2px #ddd solid;
+  padding: 10px;
   font-size: 10px;
   position: relative;
 }
@@ -13,9 +13,7 @@
   hyphens: auto;
 }
 
-.resizable *, .resizable * * {
-  font-size: 12px !important;
-}
+
 
 .resizable::after {
   content: "resize";
