--- a/content/assets/css/style.css
+++ b/content/assets/css/style.css
@@ -1,3 +1,44 @@
+.resizable {
+  resize: both; 
+  overflow: scroll; 
+  border: 2px #ddd solid; 
+  padding: 10px; 
+  position: relative;
+}
+
+.hyphenate {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
+.resizable *, .resizable * * {
+  font-size: 80% !important;
+}
+
+ .slide  .resizable img[src$="svg"] {
+  width: auto !important;
+}
+
+.slide .resizable  img {
+  display: inline !important;
+  margin-bottom: 0 !important;
+
+}
+
+.resizable::after {
+  content: "resize";
+  background-color: #EA7600;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  left: 0;
+  font-family: sans-serif;
+  font-variant: small-caps;
+}
+
 #booktitle {  
   border-bottom: 1px solid #EEEEEE; 
 }
