--- a/layouts/slide.html
+++ b/layouts/slide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
 	<meta charset="utf-8">
 	<title><%= @item[:title] %> - als Präsentation </title>
