--- a/layouts/header.html
+++ b/layouts/header.html
@@ -11,8 +11,8 @@
   <meta name="generator" content="nanoc 3.8.0">
 
   <link rel="shortcut icon" href="/assets/img/favicon.png">
-  <link rel="stylesheet" href="/assets/css/all.css?v=1">
-  <link rel="stylesheet" href="/assets/css/prettify.min.css">
+  <link rel="stylesheet" href="/assets/css/all.css">
+  <link rel="stylesheet" href="/assets/css/prettify.css">
   <style>
     li.L0, li.L1, li.L2, li.L3, li.L5, li.L6, li.L7, li.L8 {
         list-style-type: inherit !important;
