--- a/content/assets/css/deck.core.css
+++ b/content/assets/css/deck.core.css
@@ -32,7 +32,7 @@ body.deck-container {
 .deck-container h1, .deck-container h2, .deck-container h3, .deck-container h4, .deck-container h5, .deck-container h6, .deck-container p, .deck-container blockquote, .deck-container pre,
 .deck-container abbr, .deck-container address, .deck-container cite, .deck-container code, .deck-container del, .deck-container dfn, .deck-container em, .deck-container img, .deck-container ins, .deck-container kbd, .deck-container q, .deck-container samp,
 .deck-container small, .deck-container strong, .deck-container sub, .deck-container sup, .deck-container var, .deck-container b, .deck-container i, .deck-container dl, .deck-container dt, .deck-container dd, .deck-container ol, .deck-container ul, .deck-container li,
-.deck-container fieldset, .deck-container form, .deck-container label, .deck-container legend,
+ .deck-container form, .deck-container label, .deck-container legend,
 .deck-container table, .deck-container caption, .deck-container tbody, .deck-container tfoot, .deck-container thead, .deck-container tr, .deck-container th, .deck-container td,
 .deck-container article, .deck-container aside, .deck-container canvas, .deck-container details, .deck-container figcaption, .deck-container figure,
 .deck-container footer, .deck-container header, .deck-container hgroup, .deck-container menu, .deck-container nav, .deck-container section, .deck-container summary,
@@ -138,6 +138,8 @@ body.deck-container {
 .ie6 .deck-container legend, .ie7 .deck-container legend {
   margin-left: -7px;
 }
+
+/*
 .deck-container input[type="radio"] {
   vertical-align: text-bottom;
 }
@@ -150,6 +152,7 @@ body.deck-container {
 .ie6 .deck-container input {
   vertical-align: text-bottom;
 }
+  */
 .deck-container label, .deck-container input[type="button"], .deck-container input[type="submit"], .deck-container input[type="image"], .deck-container button {
   cursor: pointer;
 }
@@ -205,15 +208,17 @@ body.deck-container {
 }
 .csstransforms .slide h1, .csstransforms .slide .vcenter {
   padding: 0 48px;
-  position: absolute;
   left: 0;
   right: 0;
+  /*
+  position: absolute;
   top: 50%;
   -webkit-transform: translate(0, -50%);
   -moz-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
   -o-transform: translate(0, -50%);
   transform: translate(0, -50%);
+  */
 }
 .slide .vcenter h1 {
   position: relative;
