grid beispiel als responsive beispiel

--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -858,6 +858,9 @@ select,
   width: auto;
   height: auto;
 }
+label input[type="checkbox"], label input[type="radio"] {
+  display: inline;
+}
 label input, label textarea, label select {
   display: block;
 }
