--- a/content/images/cssgrid/responsive.css
+++ b/content/images/cssgrid/responsive.css
@@ -37,7 +37,8 @@
       "w1        headline "
       "portrait  description"
       "w2        facts"
-      "w2        navigation";
+      "w2        navigation"
+      "w2        css";
   }
 
   section {
