fix the grid - again

--- a/content/images/cssgrid/responsive.css
+++ b/content/images/cssgrid/responsive.css
@@ -38,7 +38,8 @@
       "portrait  description"
       "w2        facts"
       "w2        navigation"
-      "w2        css";
+      "w2        css"
+      "stylename stylename";
   }
 
   section {
