--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -1,3 +1,7 @@
+
+
+
+
 .resizable {
   resize: both;
   overflow: scroll;
@@ -176,6 +180,9 @@ img {
   height: auto;
   border: 0;
   -ms-interpolation-mode: bicubic;
+  max-width: 100vh;
+  max-height: 100vh;
+
 }
 button,
 input,
