--- a/layouts/header.html
+++ b/layouts/header.html
@@ -21,6 +21,7 @@
         margin-left: 50px !important;
     }
   </style>
+  <script type="module" src="https://cdn.skypack.dev/pin/@hotwired/turbo@v7.1.0-V83RMQBlYCPK9CvTqQoL/mode=imports/optimized/@hotwired/turbo.js"></script>
 </head>
 <body>
 
