--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -176,11 +176,10 @@ sub {
   bottom: -0.25em;
 }
 img {
-  max-width: 100%;
   height: auto;
   border: 0;
   -ms-interpolation-mode: bicubic;
-  max-width: 100vh;
+  max-width: min(100vh, 100%);
   max-height: 100vh;
 
 }
