--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -1251,19 +1251,17 @@ textarea[readonly] {
   background-color: #dff0d8;
   border-color: #468847;
 }
-input:focus:required:invalid,
-textarea:focus:required:invalid,
-select:focus:required:invalid {
-  color: #b94a48;
-  border-color: #ee5f5b;
+input:invalid,
+textarea:invalid,
+select:invalid {
+
+  box-shadow: 0px 0px 5px red;
 }
-input:focus:required:invalid:focus,
-textarea:focus:required:invalid:focus,
-select:focus:required:invalid:focus {
-  border-color: #e9322d;
-  -webkit-box-shadow: 0 0 6px #f8b9b7;
-  -moz-box-shadow: 0 0 6px #f8b9b7;
-  box-shadow: 0 0 6px #f8b9b7;
+input:invalid,
+textarea:invalid,
+select:invalid {
+
+  box-shadow: 0px 0px 5px red;
 }
 .form-actions {
   padding: 17px 20px 18px;
