--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -676,13 +676,8 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
 }
-pre.prettyprint {
-  margin-bottom: 18px;
-  font-size: 14px;
-}
-
-pre.prettyprint li {
-  font-size: 14px;
+pre code.hljs {
+  margin: 0 !important;
 }
 
 pre code {
