--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -30,7 +30,7 @@
   font-variant: small-caps;
 }
 
-li.separator {
+ul.nav-list li.separator {
   margin-bottom: 24px;
 }
 
@@ -554,7 +554,11 @@ ol {
   list-style: decimal;
 }
 li {
-  line-height: 18px;
+  margin-bottom: 18px;
+}
+ul.nav-list li,
+ul.sub li {
+  margin-bottom: 0;
 }
 ul.unstyled,
 ol.unstyled {
@@ -741,7 +745,6 @@ table {
 .table th,
 .table td {
   padding: 8px;
-  line-height: 18px;
   text-align: left;
   vertical-align: top;
   border-top: 1px solid #ddd;
@@ -4819,7 +4822,9 @@ body,
 p,
 li,
 dt,
-dd {
+dd,
+td,
+th {
   font-size: 18px;
   line-height: 1.4;
 }
