--- a/layouts/header.html
+++ b/layouts/header.html
@@ -21,6 +21,10 @@
         margin-left: 50px !important;
     }
 
+    visual-logger {
+      width: 100%;
+      height: 400px;
+    }
   </style>
 </head>
 <body>
