--- a/layouts/sidebar.html
+++ b/layouts/sidebar.html
@@ -1,5 +1,5 @@
 <!-- sidebar -->
-<div id="sidebar" class="span3 offset1">
+<div id="sidebar" class="span3 offset1 do-not-print">
         <div class="page-header">
         <h2>Kapitel</h2>
         </div>
