2025 das-web-und-html

--- a/content/assets/css/all.css
+++ b/content/assets/css/all.css
@@ -4850,6 +4850,11 @@ pre {
   pre {
     font-size: 12px !important;
   }
+
+  .caption {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
 }
 
 pre.left {
